Add option to make your own font small
Separate changing nickname and password

Version 1.22.1 - Nov. 13, 2016
Performance optimizations
Fix initialization on first setup

Version 1.22 - Oct. 29, 2016
Add logout button to session view and allow unbanning kicked sessions
Allow changing message sort direction
Don't escape CSS (fixes use of html entities)
Allow changing frame sorting
Allow making filters case sensitive
Add option to hide the list of chatters
Make nicknames in the chatters list clickable to send PMs more easily
Add better multi-byte character support - New dependency: mbstring extension
Don't send messages to inbox when in incognito
Remove up to three characters from the end of @mention to also match @mention, etc.
Make colour input use colorChooser, if supported
Add integrated file upload support
Allow making CSS more unique, by adding more ids/classes and allowing to over-write hardcoded CSS

Version 1.21 - Aug. 29, 2016
Don't display empty option for system messages in delete messages by name
Don't show a kick button on your own session in the list of active sessions
Allow ignoring incognito chatters
Prevent posting the same message twice, if no other message was posted in-between
Instruct browser not to send referrer.
Enable image embedding without cookies as there is no more risk of session leakage.
Allow configuring password and nickname regex
Prevent browser from caching at all.
Add external CSS setting for large stylesheets
Make /me work with custom texts set under system messages in setup
Set replace of a filter used for kicking as kickmessage
Add an option to first display a greeting message, before showing messages

Version 1.20.6 - Jul. 23, 2016
Simplify ignore logic + disallow ignoring chatters with higher status
Delete messages based on public message limit, no buffer for private ones needed
Allow deleting messages by name, when only PMs were sent

Version 1.20.5 - Jul. 19, 2016
Check permission before selectively deleting a message.
