@@ -271,7 +271,15 @@ function print_stylesheet($init=false){
 	echo '.messages #chatters th,.messages #chatters td,.post #firstline{vertical-align:top;} ';
 	echo '.approve_waiting #action td:only-child,.help #backcredit,.login td:only-child,.alogin td:only-child,.init td:only-child{text-align:center;} .sessions td,.sessions th,.approve_waiting td,.approve_waiting th{padding: 5px;} ';
 	echo '.sessions td td{padding: 1px;} .messages #bottom_link{position:fixed;top:0.5em;right:0.5em;} .messages #top_link{position:fixed;bottom:0.5em;right:0.5em;} ';
-	echo '.post table,.controls table,.login table{border-spacing:0px;margin-left:auto;margin-right:auto;} .login table{border:2px solid;} .controls{overflow-y:none;}';
+	echo '.post table,.controls table,.login table{border-spacing:0px;margin-left:auto;margin-right:auto;} .login table{border:2px solid;} .controls{overflow-y:none;} ';
+	echo '#manualrefresh{display:block;position:fixed;text-align:center;left:25%;width:50%;animation:timeout_messages ';
+	if(isset($U['refresh'])){
+		echo $U['refresh']+10;
+	}else{
+		echo '160';
+	}
+	echo 's;z-index:2;background-color:#500000;border:2px solid #ff0000;} ';
+	echo '@keyframes timeout_messages{0%{top:-200%;} 99%{top:-200%;} 100%{top:0%;}}';
 	echo '</style>';
 	if($init){
 		return;
@@ -1444,6 +1452,7 @@ function send_messages(){
 	print_start('messages', $U['refresh'], "$_SERVER[SCRIPT_NAME]?action=view&session=$U[session]&lang=$language$nocache$sort");
 	echo '<a id="top"></a>';
 	echo "<a id=\"bottom_link\" href=\"#bottom\">$I[bottom]</a>";
+	echo "<div id=\"manualrefresh\"><br>$I[manualrefresh]<br>".form('view').submit($I['reload']).'</form><br></div>';
 	if(!$U['sortupdown']){
 		echo '<div id="topic">';
 		echo get_setting('topic');
