@@ -366,5 +366,6 @@ $T=[
 	'maxuploadsize' => 'Maximal hochgeladene Dateigröße in KB',
 	'maxsize' => 'Max %d KB',
 	'cssupdate' => 'Hinweis: Standard CSS ist jetzt hardcoded und kann aus der CSS Einstellung entfernt werden',
+	'manualrefresh' => 'Manuelles Neuladen erforderlich',
 ];
 ?>
