@@ -366,5 +366,6 @@ $I=[
 	'maxuploadsize' => 'Maximum upload size in KB',
 	'maxsize' => 'Max %d KB',
 	'cssupdate' => 'Note: Default CSS is now hardcoded and can be removed from the CSS setting',
+	'manualrefresh' => 'Manual refresh required',
 ];
 ?>
